--- a/Projekt/Energieverbrauch/fmx/Form/Form.Energieverbrauch.fmx
+++ b/Projekt/Energieverbrauch/fmx/Form/Form.Energieverbrauch.fmx
@@ -11,16 +11,19 @@ object frm_Energieverbrauch: Tfrm_Energieverbrauch
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnShow = FormShow
+  Touch.GestureManager = GestureManager
   DesignerMasterStyle = 0
   object TabControl: TTabControl
     Align = Client
     Size.Width = 442.000000000000000000
     Size.Height = 632.000000000000000000
     Size.PlatformDefault = False
-    TabIndex = 3
+    TabIndex = 4
     TabOrder = 0
     TabPosition = PlatformDefault
     Sizes = (
+      442s
+      606s
       442s
       606s
       442s
@@ -75,13 +78,46 @@ object frm_Energieverbrauch: Tfrm_Energieverbrauch
       CustomIcon = <
         item
         end>
-      IsSelected = True
+      IsSelected = False
       Size.Width = 118.000000000000000000
       Size.Height = 26.000000000000000000
       Size.PlatformDefault = False
       StyleLookup = ''
       TabOrder = 0
       Text = 'tbs_ZaehlerModify'
+      ExplicitSize.cx = 118.000000000000000000
+      ExplicitSize.cy = 26.000000000000000000
     end
+    object tbs_DatenModify: TTabItem
+      CustomIcon = <
+        item
+        end>
+      IsSelected = True
+      Size.Width = 111.000000000000000000
+      Size.Height = 26.000000000000000000
+      Size.PlatformDefault = False
+      StyleLookup = ''
+      TabOrder = 0
+      Text = 'tbs_DatenModify'
+    end
+  end
+  object GestureManager: TGestureManager
+    Sensitivity = 80.000000000000000000
+    Left = 144
+    Top = 232
+    GestureData = <
+      item
+        Control = Owner
+        Collection = <
+          item
+            GestureID = sgiLeft
+          end
+          item
+            GestureID = sgiRight
+          end
+          item
+            GestureID = sgiDownLeftLong
+          end>
+      end>
   end
 end
