--- a/Projekt/Energieverbrauch/fmx/Form/Form.Main.fmx
+++ b/Projekt/Energieverbrauch/fmx/Form/Form.Main.fmx
@@ -1,18 +1,20 @@
 inherited frm_Main: Tfrm_Main
   Caption = 'frm_Base1'
+  ClientHeight = 537
+  ClientWidth = 697
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   DesignerMasterStyle = 0
   object Lay_Top: TLayout
     Align = Top
-    Size.Width = 640.000000000000000000
+    Size.Width = 697.000000000000000000
     Size.Height = 40.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 0
     object Rect_Hosteinstellung: TRectangle
       Align = Client
       Fill.Color = xFF3E78B2
-      Size.Width = 640.000000000000000000
+      Size.Width = 697.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
       object gly_Menu: TGlyph
@@ -43,15 +45,22 @@ inherited frm_Main: Tfrm_Main
     end
   end
   object lv: TListView
+    OnGesture = lvGesture
     ItemAppearanceClassName = 'TDynamicAppearance'
     ItemEditAppearanceClassName = 'TDynamicAppearance'
     HeaderAppearanceClassName = 'TListHeaderObjects'
     FooterAppearanceClassName = 'TListHeaderObjects'
+    OnUpdateObjects = lvUpdateObjects
+    EditMode = True
+    Images = dm_Bilder.SVGIconImageList_Blue
     Align = Client
-    Size.Width = 640.000000000000000000
-    Size.Height = 440.000000000000000000
+    Size.Width = 697.000000000000000000
+    Size.Height = 497.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 2
+    OnMouseDown = lvMouseDown
+    OnMouseUp = lvMouseUp
+    OnResized = lvResized
     ItemAppearanceObjects.ItemObjects.ObjectsCollection = <
       item
         AppearanceObjectName = 'Zaehler'
@@ -59,10 +68,96 @@ inherited frm_Main: Tfrm_Main
       end>
     ItemAppearanceObjects.ItemEditObjects.ObjectsCollection = <
       item
-        AppearanceObjectName = 'Text1'
+        AppearanceObjectName = 'Zaehler'
         AppearanceClassName = 'TTextObjectAppearance'
+        Appearance.Font.Family = 'Roboto'
+        Appearance.Font.Size = 16.000000000000000000
+        Appearance.Width = 475.000000000000000000
+        Appearance.Height = 44.000000000000000000
+        Appearance.Align = Center
+      end
+      item
+        AppearanceObjectName = 'Img_ZaehlerDelete'
+        AppearanceClassName = 'TImageObjectAppearance'
+        Appearance.Width = 32.000000000000000000
+        Appearance.VertAlign = Center
+      end
+      item
+        AppearanceObjectName = 'Img_ZaehlerBearb'
+        AppearanceClassName = 'TImageObjectAppearance'
+        Appearance.Width = 32.000000000000000000
+        Appearance.Height = 32.000000000000000000
+        Appearance.Align = Trailing
+        Appearance.VertAlign = Center
       end>
     OnItemClickEx = lvItemClickEx
+    object SVGIconImage1: TSVGIconImage
+      MultiResBitmap.Height = 16
+      MultiResBitmap.Width = 16
+      MultiResBitmap = <
+        item
+          FileName = 
+            'C:\Entwicklung\Delphi\Alexandria\Projekt\Energieverbrauch\fmx\Bi' +
+            'lder\ToolMeterDel\png\1x\small\tool-meter-trash.png'
+        end
+        item
+          Scale = 2.000000000000000000
+          FileName = 
+            'C:\Entwicklung\Delphi\Alexandria\Projekt\Energieverbrauch\fmx\Bi' +
+            'lder\ToolMeterDel\png\1x\small\tool-meter-trash.png'
+        end>
+      DisableInterpolation = True
+      Position.X = 664.000000000000000000
+      Position.Y = 136.000000000000000000
+      Size.Width = 65.000000000000000000
+      Size.Height = 65.000000000000000000
+      Size.PlatformDefault = False
+      SVGText = 
+        '<?xml version="1.0" encoding="UTF-8"?>'#13#10'<!DOCTYPE svg PUBLIC "-/' +
+        '/W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/s' +
+        'vg11.dtd">'#13#10'<svg version="1.1" id="Layer_1" xmlns="http://www.w3' +
+        '.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px' +
+        '" y="0px" width="16px" height="16px" viewBox="0 0 16 16" enable-' +
+        'background="new 0 0 16 16" xml:space="preserve">'#13#10'  <g id="main"' +
+        '>'#13#10'    <g id="icon">'#13#10'      <path d="M6.231,0.04395L5.554,0.1375' +
+        'L4.901,0.2947L4.275,0.5125L3.679,0.7877L3.117,1.118L2.592,1.499L' +
+        '2.106,1.929L1.662,2.405L1.265,2.923L0.917,3.481L0.6209,4.075L0.3' +
+        '803,4.704L0.1982,5.362L0.07773,6.048L0.02207,6.759L0.0003906,8.7' +
+        '21L0.01094,10.68L0.04023,11.34L0.1299,11.88L0.2887,12.31L0.5252,' +
+        '12.65L0.848,12.89L1.266,13.06L1.787,13.15L2.421,13.18L7.4,13.19L' +
+        '7.4,11.14L6.801,11.2L5.943,11.11L5.143,10.86L4.42,10.46L3.789,9.' +
+        '926L3.269,9.282L2.877,8.542L2.629,7.724L2.542,6.846L2.629,5.968L' +
+        '2.877,5.15L3.269,4.41L3.789,3.766L4.419,3.234L5.143,2.832L5.942,' +
+        '2.579L6.801,2.49L7.659,2.579L8.459,2.832L9.182,3.234L9.812,3.766' +
+        'L10.33,4.41L10.73,5.15L10.97,5.968L10.98,6L13.56,6L13.48,5.481L1' +
+        '3.3,4.826L13.08,4.199L12.79,3.603L12.45,3.041L12.07,2.517L11.64,' +
+        '2.033L11.16,1.593L10.65,1.201L10.1,0.8584L9.521,0.5699L8.909,0.3' +
+        '383L8.271,0.1666L7.61,0.05859L6.929,0.01699zz" fill="#797979"/>'#13 +
+        #10'      <path d="M5.942,2.579L5.143,2.832L4.419,3.234L3.789,3.766' +
+        'L3.269,4.41L2.876,5.15L2.628,5.968L2.542,6.846L2.629,7.724L2.877' +
+        ',8.542L3.269,9.282L3.789,9.926L4.42,10.46L5.143,10.86L5.943,11.1' +
+        '1L6.801,11.2L7.4,11.14L7.4,9.745L7.194,9.55L7.036,9.313L6.936,9.' +
+        '043L6.9,8.748L6.9,7.892L6.938,7.516L7.046,7.164L7.216,6.843L7.44' +
+        '1,6.561L7.712,6.328L8.022,6.151L8.361,6.039L8.723,6L10.98,6L10.9' +
+        '7,5.968L10.73,5.15L10.33,4.41L9.812,3.766L9.182,3.234L8.459,2.83' +
+        '2L7.659,2.579L6.801,2.49zz" fill-rule="evenodd" fill="#FFFFFF"/>' +
+        #13#10'      <path d="M5.121,6.857L5.894,6.803L6.628,6.87L7.104,7.054' +
+        'L7.216,6.843L7.441,6.561L7.712,6.328L8.022,6.151L8.049,6.142L7.8' +
+        '5,6.027L7.48,5.895L7.084,5.819L6.676,5.795L6.307,5.813L6.43,4.91' +
+        '4L8.645,4.914L8.645,3.791L5.499,3.791zM4.83,9.401L5.483,9.632L5.' +
+        '924,9.706L6.421,9.734L6.968,9.691L7.263,9.615L7.194,9.55L7.036,9' +
+        '.313L6.936,9.043L6.9,8.748L6.9,8.556L6.771,8.612L6.359,8.664L5.9' +
+        '74,8.637L5.614,8.567L5.067,8.376zz" fill="#3E79B4"/>'#13#10'    </g>'#13#10 +
+        '    <g id="overlay">'#13#10'      <path d="M8.4,9.5v5.4671C8.4,15.6538' +
+        ',9.0333,16,9.725,16h4.3454c0.6917,0,1.3296,-0.3462,1.3296,-1.032' +
+        '9V9.5H8.4z" fill="#797979"/>'#13#10'      <path d="M15.1718,7H12.1h-0.' +
+        '4H8.7235C8.2661,7,7.9,7.4377,7.9,7.8918v0.8562c0,0.144,0.1129,0.' +
+        '252,0.2579,0.252h7.5795c0.145,0,0.2626,-0.108,0.2626,-0.252v-0.8' +
+        '562C16,7.4377,15.6292,7,15.1718,7z" fill="#3E79B4"/>'#13#10'      <rec' +
+        't x="9.9" y="10.5" width="1" height="4.5" fill="#FFFFFF"/>'#13#10'    ' +
+        '  <rect x="12.9" y="10.5" width="1" height="4.5" fill="#FFFFFF"/' +
+        '>'#13#10'    </g>'#13#10'  </g>'#13#10'</svg>'
+    end
   end
   object MultiView: TMultiView
     NavigationPaneOptions.CollapsedWidth = 201.000000000000000000
@@ -75,11 +170,16 @@ inherited frm_Main: Tfrm_Main
       Size.Width = 201.000000000000000000
       Size.Height = 50.000000000000000000
       Size.PlatformDefault = False
-      TabOrder = 1
+      TabOrder = 2
       OnClick = Lay_HostEinstellungClick
       object Label1: TLabel
+        StyledSettings = [Style, FontColor]
         Position.X = 67.000000000000000000
         Position.Y = 16.000000000000000000
+        Size.Width = 134.000000000000000000
+        Size.Height = 17.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.Family = 'Roboto'
         Text = 'Host-Einstellung'
         TabOrder = 0
       end
@@ -103,11 +203,15 @@ inherited frm_Main: Tfrm_Main
       Size.Width = 201.000000000000000000
       Size.Height = 50.000000000000000000
       Size.PlatformDefault = False
-      TabOrder = 0
-      OnClick = Lay_HostEinstellungClick
+      TabOrder = 1
       object Label2: TLabel
+        StyledSettings = [Style, FontColor]
         Position.X = 73.000000000000000000
-        Position.Y = 18.000000000000000000
+        Position.Y = 17.000000000000000000
+        Size.Width = 136.000000000000000000
+        Size.Height = 17.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.Family = 'Roboto'
         Text = 'Z'#228'hler anlegen'
         TabOrder = 0
       end
@@ -122,6 +226,38 @@ inherited frm_Main: Tfrm_Main
         Size.Height = 40.000000000000000000
         Size.PlatformDefault = False
         ImageIndex = 1
+        Images = dm_Bilder.SVGIconImageList_Blue
+      end
+    end
+    object lay_ZaehlerBearb: TLayout
+      Align = Top
+      Position.Y = 100.000000000000000000
+      Size.Width = 201.000000000000000000
+      Size.Height = 50.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 0
+      object lbl_ZaehlerBearb: TLabel
+        StyledSettings = [Style, FontColor]
+        Position.X = 73.000000000000000000
+        Position.Y = 18.000000000000000000
+        Size.Width = 136.000000000000000000
+        Size.Height = 17.000000000000000000
+        Size.PlatformDefault = False
+        TextSettings.Font.Family = 'Roboto'
+        Text = 'Z'#228'hler barbeiten'
+        TabOrder = 0
+      end
+      object Glyph2: TGlyph
+        Margins.Left = 12.000000000000000000
+        Margins.Top = 5.000000000000000000
+        Margins.Bottom = 5.000000000000000000
+        Align = Left
+        Position.X = 12.000000000000000000
+        Position.Y = 5.000000000000000000
+        Size.Width = 40.000000000000000000
+        Size.Height = 40.000000000000000000
+        Size.PlatformDefault = False
+        ImageIndex = 2
         Images = dm_Bilder.SVGIconImageList_Blue
       end
     end
