--- a/Projekt/Energieverbrauch/fmx/Form/Form.ZaehlerModify.fmx
+++ b/Projekt/Energieverbrauch/fmx/Form/Form.ZaehlerModify.fmx
@@ -50,27 +50,29 @@ inherited frm_ZaehlerModify: Tfrm_ZaehlerModify
     Size.PlatformDefault = False
     TabOrder = 1
     object Label1: TLabel
+      StyledSettings = [Size, Style, FontColor]
       Position.X = 16.000000000000000000
-      Position.Y = 24.000000000000000000
+      Position.Y = 23.000000000000000000
       Size.Width = 57.000000000000000000
       Size.Height = 17.000000000000000000
       Size.PlatformDefault = False
+      TextSettings.Font.Family = 'Roboto'
       Text = 'Z'#228'hler:'
       TabOrder = 0
     end
-    object Edit1: TEdit
+    object edt_Zaehler: TEdit
       Touch.InteractiveGestures = [LongTap, DoubleTap]
       Anchors = [akLeft, akTop, akRight]
       TabOrder = 1
-      Position.X = 64.000000000000000000
-      Position.Y = 23.000000000000000000
-      Size.Width = 561.000000000000000000
+      Position.X = 81.000000000000000000
+      Position.Y = 20.000000000000000000
+      Size.Width = 544.000000000000000000
       Size.Height = 22.000000000000000000
       Size.PlatformDefault = False
     end
     object btn_Save: TCornerButton
-      Position.X = 64.000000000000000000
-      Position.Y = 72.000000000000000000
+      Position.X = 135.000000000000000000
+      Position.Y = 216.000000000000000000
       Sides = [Top, Left, Bottom, Right]
       Size.Width = 114.000000000000000000
       Size.Height = 33.000000000000000000
@@ -79,10 +81,11 @@ inherited frm_ZaehlerModify: Tfrm_ZaehlerModify
       Text = 'Speichern'
       XRadius = 10.000000000000000000
       YRadius = 10.000000000000000000
+      OnClick = btn_SaveClick
     end
     object btn_Neu: TCornerButton
-      Position.X = 186.000000000000000000
-      Position.Y = 72.000000000000000000
+      Position.X = 282.000000000000000000
+      Position.Y = 216.000000000000000000
       Sides = [Top, Left, Bottom, Right]
       Size.Width = 143.000000000000000000
       Size.Height = 33.000000000000000000
@@ -91,6 +94,31 @@ inherited frm_ZaehlerModify: Tfrm_ZaehlerModify
       Text = 'Weiteren Z'#228'hler anlegen'
       XRadius = 10.000000000000000000
       YRadius = 10.000000000000000000
+    end
+    object lay_Speichern: TLayout
+      Position.X = 69.000000000000000000
+      Position.Y = 68.000000000000000000
+      Size.Width = 264.000000000000000000
+      Size.Height = 50.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 4
+      object lbl_Speichern: TLabel
+        StyledSettings = [Size, Style, FontColor]
+        Position.X = 60.000000000000000000
+        Position.Y = 17.000000000000000000
+        TextSettings.Font.Family = 'Roboto'
+        Text = 'Speichern'
+        TabOrder = 0
+      end
+      object gly_Speichern: TGlyph
+        Position.X = 14.000000000000000000
+        Position.Y = 9.000000000000000000
+        Size.Width = 32.000000000000000000
+        Size.Height = 32.000000000000000000
+        Size.PlatformDefault = False
+        ImageIndex = 4
+        Images = dm_Bilder.SVGIconImageList_Blue
+      end
     end
   end
 end
