--- a/Projekt/Energieverbrauch/fmx/Form/Form.DatenModify.fmx
+++ b/Projekt/Energieverbrauch/fmx/Form/Form.DatenModify.fmx
@@ -40,6 +40,19 @@ inherited frm_DatenModify: Tfrm_DatenModify
         Text = 'Z'#228'hlerstand'
         TabOrder = 1
       end
+      object gly_Save: TGlyph
+        Margins.Left = 10.000000000000000000
+        Margins.Top = 2.000000000000000000
+        Margins.Bottom = 2.000000000000000000
+        Align = Left
+        Position.X = 60.000000000000000000
+        Position.Y = 2.000000000000000000
+        Size.Width = 40.000000000000000000
+        Size.Height = 36.000000000000000000
+        Size.PlatformDefault = False
+        ImageIndex = 3
+        Images = dm_Bilder.SVGIconImageList
+      end
     end
   end
   object Label1: TLabel
@@ -56,30 +69,15 @@ inherited frm_DatenModify: Tfrm_DatenModify
     TextSettings.Font.Size = 14.000000000000000000
     TextSettings.FontColor = claDimgray
     Text = 'Ablesedatum'
-    TabOrder = 3
-  end
-  object lbl_Ablesedatum: TLabel
-    Align = Top
-    StyledSettings = [Style]
-    Margins.Left = 20.000000000000000000
-    Margins.Top = 5.000000000000000000
-    Position.X = 20.000000000000000000
-    Position.Y = 92.000000000000000000
-    Size.Width = 620.000000000000000000
-    Size.Height = 17.000000000000000000
-    Size.PlatformDefault = False
-    TextSettings.Font.Family = 'Courier New'
-    TextSettings.Font.Size = 14.000000000000000000
-    Text = '31.12.2023 15:00'
-    TabOrder = 1
+    TabOrder = 2
   end
   object Label2: TLabel
     Align = Top
     StyledSettings = [Style]
     Margins.Left = 20.000000000000000000
-    Margins.Top = 30.000000000000000000
+    Margins.Top = 40.000000000000000000
     Position.X = 20.000000000000000000
-    Position.Y = 139.000000000000000000
+    Position.Y = 127.000000000000000000
     Size.Width = 620.000000000000000000
     Size.Height = 17.000000000000000000
     Size.PlatformDefault = False
@@ -87,18 +85,28 @@ inherited frm_DatenModify: Tfrm_DatenModify
     TextSettings.Font.Size = 14.000000000000000000
     TextSettings.FontColor = xFF3E78B2
     Text = 'Z'#228'hlerstand'
-    TabOrder = 2
+    TabOrder = 1
   end
   object edt_Zaehlerstand: TEdit
     Touch.InteractiveGestures = [LongTap, DoubleTap]
     Align = Top
-    TabOrder = 4
+    TabOrder = 3
+    KeyboardType = DecimalNumberPad
     Position.X = 20.000000000000000000
-    Position.Y = 156.000000000000000000
+    Position.Y = 144.000000000000000000
     Margins.Left = 20.000000000000000000
     Margins.Right = 20.000000000000000000
     Size.Width = 600.000000000000000000
     Size.Height = 22.000000000000000000
     Size.PlatformDefault = False
+  end
+  object edt_Ablesedatum: TDateEdit
+    Date = 45297.000000000000000000
+    Position.X = 20.000000000000000000
+    Position.Y = 91.000000000000000000
+    Size.Width = 197.000000000000000000
+    Size.Height = 22.000000000000000000
+    Size.PlatformDefault = False
+    TabOrder = 4
   end
 end
