--- a/Projekt/Energieverbrauch/fmx/Form/Form.StatistikMonate.fmx
+++ b/Projekt/Energieverbrauch/fmx/Form/Form.StatistikMonate.fmx
@@ -4,19 +4,25 @@ inherited frm_StatistikMonate: Tfrm_StatistikMonate
   ClientWidth = 686
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  DesignerMasterStyle = 0
+  DesignerMasterStyle = 3
   object Chart: TChart
+    AllowPanning = pmNone
     Foot.Font.StyleExt = {00040000000200000004000000}
     Legend.Title.Font.StyleExt = {00070000000000000004000000}
     SubFoot.Font.StyleExt = {00040000000200000004000000}
     Title.Text.Strings = (
       'TChart')
+    Title.Visible = False
+    Panning.MouseWheel = pmwNone
+    TopAxis.Title.Visible = False
+    View3D = False
+    Zoom.Allow = False
     Zoom.Brush.Kind = None
     Zoom.Pen.Fill.Color = claSilver
     Align = Client
     BevelOuter = bvNone
     TabOrder = 1
-    Cursor = crSizeWE
+    Cursor = crDrag
     Size.Width = 686.000000000000000000
     Size.Height = 538.000000000000000000
     Size.PlatformDefault = False
@@ -24,6 +30,7 @@ inherited frm_StatistikMonate: Tfrm_StatistikMonate
     object Series1: TBarSeries
       HoverElement = []
       Legend.Visible = False
+      Marks.Style = smsValue
       ShowInLegend = False
       XValues.Name = 'X'
       XValues.Order = loAscending
@@ -39,7 +46,7 @@ inherited frm_StatistikMonate: Tfrm_StatistikMonate
     TabOrder = 2
     object Layout2: TLayout
       Align = Center
-      Size.Width = 519.000000000000000000
+      Size.Width = 361.000000000000000000
       Size.Height = 29.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
@@ -58,8 +65,9 @@ inherited frm_StatistikMonate: Tfrm_StatistikMonate
           'Oktober'
           'November'
           'Dezember')
-        Size.Width = 121.000000000000000000
-        Size.Height = 29.000000000000000000
+        ItemIndex = 11
+        Size.Width = 105.000000000000000000
+        Size.Height = 32.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 1
         OnChange = cbx_VonMonatChange
@@ -69,10 +77,12 @@ inherited frm_StatistikMonate: Tfrm_StatistikMonate
         Align = Left
         TabOrder = 3
         KeyboardType = NumberPad
-        Position.X = 121.000000000000000000
-        Size.Width = 100.000000000000000000
-        Size.Height = 29.000000000000000000
+        Position.X = 115.000000000000000000
+        Margins.Left = 10.000000000000000000
+        Size.Width = 60.000000000000000000
+        Size.Height = 32.000000000000000000
         Size.PlatformDefault = False
+        OnExit = edt_VonJahrExit
       end
       object cbx_BisMonat: TComboBox
         Align = Right
@@ -89,21 +99,24 @@ inherited frm_StatistikMonate: Tfrm_StatistikMonate
           'Oktober'
           'November'
           'Dezember')
-        Position.X = 298.000000000000000000
-        Size.Width = 121.000000000000000000
-        Size.Height = 29.000000000000000000
+        Position.X = 186.000000000000000000
+        Size.Width = 105.000000000000000000
+        Size.Height = 32.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
+        OnChange = cbx_BisMonatChange
       end
       object edt_BisJahr: TEdit
         Touch.InteractiveGestures = [LongTap, DoubleTap]
         Align = Right
         TabOrder = 2
         KeyboardType = NumberPad
-        Position.X = 419.000000000000000000
-        Size.Width = 100.000000000000000000
-        Size.Height = 29.000000000000000000
+        Position.X = 301.000000000000000000
+        Margins.Left = 10.000000000000000000
+        Size.Width = 60.000000000000000000
+        Size.Height = 32.000000000000000000
         Size.PlatformDefault = False
+        OnExit = edt_BisJahrExit
       end
     end
   end
